--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -3,8 +3,9 @@ env:
   es2021: true
 
 extends:
-  - plugin:react/recommended
   - airbnb
+  - plugin:react/recommended
+  - plugin:functional/recommended
   - plugin:react-hooks/recommended
 
 parserOptions:
@@ -15,6 +16,7 @@ parserOptions:
 
 plugins:
   - react
+  - functional
 
 rules:
   no-param-reassign: 0
