--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -13,6 +13,7 @@ parserOptions:
     jsx: true
   ecmaVersion: latest
   sourceType: module
+  parser: "@babel/eslint-parser"
 
 plugins:
   - react
@@ -25,8 +26,8 @@ rules:
   react/prop-types: 0
   no-console: 0
   react/react-in-jsx-scope: 0
-  functional/no-conditional-statement: 0
-  functional/no-expression-statement: 0
+  functional/no-conditional-statements: 0
+  functional/no-expression-statements: 0
   functional/immutable-data: 0
   functional/functional-parameters: 0
   functional/no-try-statement: 0
@@ -35,3 +36,4 @@ rules:
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  functional/no-return-void: 0
