--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.5",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
+    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
