--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/MarinaRodina/frontend-project-12/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/MarinaRodina/frontend-project-12/actions)",
+  "description": "Chat: simplified version of Slack",
   "main": "index.js",
   "scripts": {
     "build": "npm run build --prefix frontend",
